[package]
name = "as8510"
version = "0.1.0"
edition = "2021"
authors = ["Rand <dint04wooded@icloud.com>"]
description = "An async no_std driver for the AS8510 SPI current and voltage sensor"
repository = "https://github.com/rand12345/ad8510-rs"
license = "MIT"
readme = "README.md"
keywords = ["embedded", "no_std", "async", "sensor", "as8510"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://rand12345.github.io"

[features]

[dependencies]
embedded-hal-async = "1.0.0"
